--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@microsoft/signalr": "^8.0.7",
+    "signalr": "^2.4.3",
     "vue": "^3.5.13"
   },
   "devDependencies": {
